# revline

./: .bandit.yml  .claudeignore  .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BACKEND-TYPE-FIXES-SUMMARY.md  CLAUDE.md  DEV_SETUP.md  IMPLEMENTATION-COMPLETE.md  Makefile  PR-SPRINT-6B.md  PR-SUMMARY-Sprint5B-Phase2.md  PR-SUMMARY-Sprint6-Auth-Fixes.md  README-CI.md  README.md  VALIDATION-RESULTS-6C.md  VALIDATION-RESULTS.md  cat  mypy.ini  package-lock.json  package.json  pyproject.toml  seed-idempotent.patch  settings.json  suggested-changes.md
.claude/agents/: README.md  api-layer-validator.md  auth-flow-auditor.md  sprint-reviewer.md  type-safety-enforcer.md
.git_tools/: add_frontend_mvp.sh  update_merge_push.sh
.github/workflows/: agents.yml  ci.yml  frontend.yml
api/: Dockerfile.dev  openapi-baseline.json  pyproject.toml  requirements.txt  setup.cfg
api/app/: main.py  startup_seed.py
api/app/core/: config.py  csp.py  db.py  rate_limit.py  security.py  seed_active_ros.py  seed_helpers.py  seed_meta.py  startup_checks.py  token_family.py
api/app/data/: ro_statuses.json  service_categories.json
api/app/middleware/: __init__.py  security.py
api/app/models/: __init__.py  base.py  customer.py  meta.py  part.py  repair_order.py  ro.py  user.py  vehicle.py
api/app/routers/: auth.py  customers.py  meta.py  ros.py  search.py  stats.py  vehicles.py
api/app/schemas/: __init__.py  customer.py  part.py  ro.py  stats.py  user.py  vehicle.py
api/app/scripts/: seed_admin.py
api/app/services/: redis.py
api/app/tests/: conftest.py  test_auth.py  test_security_headers.py  test_seed_helpers.py  test_token_family.py
api/frontend/infra/nginx/: default.conf.template
api/migrations/: env.py
api/migrations/versions/: 20251020_active_ro_board_additions.py  6eb65f56e74f_add_service_categories_table.py  917a8bf701e2_create_users_table.py  fec0b08a119e_domain_tables.py
backend/: alembic.ini  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: auth.py
backend/migrations/versions/: 917a8bf701e2_create_users_table.py
db/sql/: assert_canonical_ro_statuses.sql  assert_ros_have_valid_status.sql
docs/claude/: agents-created-2025-11-01.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  main.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/coverage/: coverage-summary.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx  query.ts
frontend/src/__tests__/: smoke.test.ts
frontend/src/api/: ros.ts
frontend/src/components/: DashboardLayout.tsx  DashboardSkeleton.tsx  DashboardStats.tsx  Footer.tsx  HealthStatus.tsx  LogoutButton.tsx  Navbar.tsx  ROInlineDetail.tsx  StatusBadge.tsx
frontend/src/hooks/: useActiveROs.ts  useROStatuses.ts  useServiceCategories.ts  useStats.ts  useUser.ts
infra/: .env.ci  dev.Dockerfile.api  dev.Dockerfile.web  docker-compose.yml
infra/nginx/: default.conf.template
reports/: .gitignore
scripts/: dev-sanity.sh  dev-up.sh  gen-api.mjs  prod-up.sh  run-auth-audit.sh  run-sprint-review.sh  sanity_check.py  validate_seeder_lockin.sh
(+94 files in other folders)
